website/versioned_docs/version-8.0.0/01_intro__framework_overview.md
---
id: version-8.0.0-framework_overview
title: Architecture Overview
sidebar_label: Architecture Overview
copyright: (C) 2007-2018 GoodData Corporation
original_id: framework_overview
---

GoodData.UI follows principles of the layered architecture and draws a clean line between the different UI components and
the backend server that calculates the data to render. The UI components integrate with a backend server through an interface 
that we call **Analytical Backend**. 

The **Analytical Backend** is designed as a Service Provider Interface (SPI) with clearly described contracts that
you can implement to work even with your own arbitrary backend.
 
GoodData.UI comes with a full implementation of the Analytical Backend SPI for the GoodData platform (codename `bear`). 

For now, the full documentation of the SPI is provided only at the code level. For more information, see the 
`@gooddata/sdk-backend-spi` package.

## Available packages

GoodData.UI consists of several packages, each with its own set of responsibilities and exposed APIs. As a 
developer, you can pick and choose packages according to requirements of your application.

| Package | Contents |
| :--- | :--- |
| @gooddata/api-client-bear | The REST API client (formerly known as `gooddata-js`) | 
| @gooddata/api-model-bear | The type definitions for the REST API client (formerly known as `typings`) | 
| @gooddata/sdk-backend-bear | The analytical backend implementation for the GoodData platform | 
| @gooddata/sdk-model | The APIs and models used to construct inputs to executions and charts |
| @gooddata/sdk-ui | The React infrastructure and headless components such as the Execute component | 
| @gooddata/sdk-ui-charts | The React components for all charts | 
| @gooddata/sdk-ui-geo | The React components for the Geo Pushpin Chart component | 
| @gooddata/sdk-ui-pivot | The React component for the Pivot Table component | 
| @gooddata/sdk-ui-filters | The filtering components | 
| @gooddata/sdk-ui-ext | The components for embedding insights created in Analytical Designer |
